[gd_scene load_steps=4 format=3 uid="uid://bb42qdoy2bk7a"]

[ext_resource type="Texture2D" uid="uid://4m1n36d74cfm" path="res://menu/NewMainMenu/Base/InfoPolygon.png" id="1_lyfrj"]
[ext_resource type="Script" uid="uid://bdfu28y1p57bq" path="res://setGameResoure.gd" id="1_se6hs"]
[ext_resource type="LabelSettings" uid="uid://bdja5ndbr6ucq" path="res://menu/NewMainMenu/Style/MainMenuLabel.tres" id="2_se6hs"]

[node name="ButtonPrefab" type="Control" node_paths=PackedStringArray("button", "textLabel", "textureRect")]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 3
script = ExtResource("1_se6hs")
button = NodePath("Button")
textLabel = NodePath("HBoxContainer/Name/Label")
textureRect = NodePath("HBoxContainer/Control/TextureRect")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -13.0
offset_right = 12.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lyfrj")
stretch_mode = 2

[node name="Name" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Name"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "GAME NAME"
label_settings = ExtResource("2_se6hs")
vertical_alignment = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
